# TPanelDesktop

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
TPanelApp/: asgi.py  settings.py  urls.py  wsgi.py
backend_django/: .dockerignore  Dockerfile  manage.py  requirements.txt
backend_django/backend_api/: admin.py  cache.py  models.py  serializer.py  serializers.py  tests.py  urls.py  views.py
backend_django/backend_api/migrations/: 0001_initial.py  0002_task_overdue.py
backend_django/backend_django/: redis_settings.py  settings.py  urls.py
react-front-app/: package-lock.json  package.json
react-front-app/public/: index.html  manifest.json
react-front-app/public/icons/: manifest.json
react-front-app/src/: App.css  App.jsx  index.js  themes.js
react-front-app/src/components/base/: BottomContent.jsx  Header.jsx  LogInOutButton.jsx  MemberCard.jsx  MenuBar.jsx  MenuLinks.jsx  NavButton.jsx  PrivateNavButton.jsx  ProjectCard.jsx  Sidebar.jsx  TaskCard.jsx
react-front-app/src/components/pages/: Root.jsx
react-front-app/src/context/: AuthContext.js
react-front-app/src/utils/: PrivateRouter.jsx  UnPrivateRouter.jsx  types.ts  useAxios.js
tpanel/: apps.py  forms.py  models.py  urls.py  views.py
tpanel/static/css/: login.css  style.css
tpanel/static/js/: SPA.js  index.js  main.js  themes.js
tpanel/templates/registration/: login.html  profile.html
tpanel/templates/tpanel/: base.html  index.html  mail.html  main.html  not_found.html  notifications.html  tasks.html
tpanel/templatetags/: auth_extras.py
(+20 files in other folders)
